--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -72,4 +73,11 @@ dependencies {
     //Parse
     implementation "com.github.parse-community.Parse-SDK-Android:parse:4.1.0"
     implementation "com.github.parse-community.Parse-SDK-Android:ktx:4.1.0"
+
+    //LifeCycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
+    //Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 }
