--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    //state flow
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+
 
     //Compose navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
