--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,10 @@ dependencies {
 
     //Coil
     implementation "io.coil-kt:coil-compose:2.2.2"
+
+    //Permissions
+    implementation 'com.google.accompanist:accompanist-permissions:0.27.0'
+
+    //LiveData
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
 }
