--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -77,6 +78,8 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:4.1.0'
     implementation 'com.github.parse-community.Parse-SDK-Android:ktx:4.1.0'
     implementation 'com.github.parse-community:ParseLiveQuery-Android:1.2.2'
+    implementation "com.github.parse-community.Parse-SDK-Android:fcm:1.26.0"
+    implementation 'com.github.parse-community.Parse-SDK-Android:bolts-tasks:1.26.0'
 
     //LifeCycle
     implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03'
@@ -93,4 +96,12 @@ dependencies {
 
     //LiveData
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+
+    //FCM
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.2'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+
+
 }
