--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ buildscript {
     ext {
         compose_ui_version = '1.3.0'
     }
-
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+    }
 
 }
 
