--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,5 +108,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+
 
 }
