--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="finditkey" />
+        <meta-data
+            android:name="com.parse.MASTER_KEY"
+            android:value="finditkey" />
+
         <meta-data android:name="com.parse.push.gcm_sender_id"
             android:value="id:1072832924272" />
 
